--- a/css/main.css
+++ b/css/main.css
@@ -5370,6 +5370,7 @@ button.close {
     display: none !important; } }
 body {
   padding-top: 50px;
-  padding-bottom: 20px; }
+  padding-bottom: 20px;
+  background: purple; }
 
 /*# sourceMappingURL=main.css.map */
