--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,5 +3,8 @@
 body {
     padding-top: 50px;
     padding-bottom: 20px;
-    background: purple;
+}
+
+.jumbotron {
+	background: url(../img/sky.jpg);
 }
