Watching scss/ and js/src/ directories to fire tasks now

--- a/css/main.css
+++ b/css/main.css
@@ -5373,6 +5373,7 @@ body {
   padding-bottom: 20px; }
 
 .jumbotron {
-  background: url(../img/sky.jpg); }
+  background: url(../img/sky.jpg);
+  font-weight: 800; }
 
 /*# sourceMappingURL=main.css.map */
