--- a/css/main.css
+++ b/css/main.css
@@ -5372,4 +5372,6 @@ body {
   padding-top: 50px;
   padding-bottom: 20px; }
 
-/*# sourceMappingURL=main.css.map */
+.jumbotron {
+  background: url("../img/earth.jpg") 50% 50% no-repeat #000;
+  color: #fff; }
