--- a/css/main.css
+++ b/css/main.css
@@ -5374,4 +5374,6 @@ body {
 
 .jumbotron {
   background: url("../img/earth.jpg") 50% 50% no-repeat #000;
-  color: #fff; }
+  color: #2d7ff2; }
+
+/*# sourceMappingURL=main.css.map */
